# conveyor

./: .gitreview  .testr.conf  README.rst  build.sh  requirements  requirements.txt  setup.cfg  setup.sh  tox.ini  watchdog_conveyor.sh
conveyor/: __init__.py  config.py  context.py  debugger.py  exception.py  i18n.py  manager.py  opts.py  paths.py  policy.py  rpc.py  service.py  ssh_utils.py  utils.py  version.py  wsgi.py
conveyor/api/: __init__.py  common.py  extensions.py  urlmap.py  versions.py  xmlutil.py
conveyor/api/contrib/: __init__.py  clone.py  migrate.py  plan.py  resource.py
conveyor/api/middleware/: auth.py  base.py  catch_errors.py  fault.py  request_id.py  sizelimit.py
conveyor/api/openstack/: api_version_request.py  versioned_method.py
conveyor/api/v1/: clone.py  configuration.py  migrate.py  plans.py  resources.py  router.py  services.py
conveyor/api/v1/configure/: configuration.py  router.py
conveyor/api/views/: resources.py  services.py  versions.py
conveyor/api/wsgi/: __init__.py  wsgi.py
conveyor/brick/: base.py
conveyor/clone/: api.py  manager.py  rpcapi.py  test.py
conveyor/clone/drivers/: driver.py
conveyor/clone/drivers/aws/: driver.py
conveyor/clone/drivers/openstack/: driver.py
conveyor/clone/instances/: manager.py
conveyor/clone/instances/driver/: stack_template.py  template.py
conveyor/clone/resources/: common.py
conveyor/clone/resources/instance/: manager.py
conveyor/clone/resources/volume/: manager.py
conveyor/cmd/: all.py  api.py  clone.py  manage.py  plan.py  resource.py
conveyor/common/: _i18n.py  client.py  config.py  context.py  eventlet_backdoor.py  excutils.py  gettextutils.py  imageutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  periodic_task.py  plan_status.py  policy.py  processutils.py  service.py  sqlalchemyutils.py  strutils.py  template_format.py  threadgroup.py  timeutils.py  utils.py  versionutils.py
conveyor/compute/: __init__.py  conveyorcaa_compute.py  nova.py
conveyor/conveyoragentclient/: client.py
conveyor/conveyoragentclient/common/: base.py  exceptions.py
conveyor/conveyoragentclient/v1/: birdiegatewayservice.py  client.py
conveyor/conveyorcaa/: api.py
conveyor/conveyorheat/: __init__.py  version.py
conveyor/conveyorheat/api/: api.py  versions.py
conveyor/conveyorheat/api/aws/: ec2token.py  exception.py  utils.py
conveyor/conveyorheat/api/cfn/: __init__.py  versions.py
conveyor/conveyorheat/api/cloudwatch/: __init__.py  watch.py
conveyor/conveyorheat/api/groupwatch/: __init__.py  iam_project_id.py  iam_token.py  versions.py
conveyor/conveyorheat/api/hw/: hw_ec2token.py
conveyor/conveyorheat/api/middleware/: fault.py  version_negotiation.py  xml.py
conveyor/conveyorheat/api/openstack/: __init__.py  versions.py
conveyor/conveyorheat/cmd/: api.py  api_cfn.py  api_cloudwatch.py  engine.py  groupwatch.py  manage.py
conveyor/conveyorheat/common/: auth_password.py  auth_url.py  cache.py  config.py  context.py  crypt.py  custom_backend_auth.py  endpoint_utils.py  environment_format.py  exception.py  grouputils.py  heat_keystoneclient.py  identifier.py  lifecycle_plugin_utils.py  messaging.py  netutils.py  param_utils.py  plugin_loader.py  policy.py  profiler.py  service_utils.py  short_id.py  template_format.py  timeutils.py  urlfetch.py  wsgi.py
conveyor/conveyorheat/common/huawei/: identity.py  keystone_client.py  trusts.py
conveyor/conveyorheat/engine/: api.py  attributes.py  constraints.py  dependencies.py  environment.py  event.py  function.py  lifecycle_plugin.py  parameter_groups.py  parameters.py  plugin_manager.py  properties.py  resource.py  rsrc_defn.py  scheduler.py  service.py  service_software_config.py  service_stack_watch.py  stack.py  stack_lock.py  support.py  sync_point.py  template.py  timestamp.py  translation.py  update.py  watchrule.py  worker.py
conveyor/conveyorheat/engine/cfn/: functions.py  template.py
conveyor/conveyorheat/engine/clients/: __init__.py  client_plugin.py  progress.py
conveyor/conveyorheat/engine/constraint/: common_constraints.py
conveyor/conveyorheat/engine/groupwatch/: alarm.py  group.py  service.py  task.py
conveyor/conveyorheat/httpd/: heat_api.py  heat_api_cfn.py  heat_api_cloudwatch.py
conveyor/conveyorheat/hw_plugins/: utils.py
conveyor/conveyorheat/objects/: base.py  event.py  fields.py  raw_template.py  resource.py  resource_data.py  service.py  snapshot.py  software_config.py  software_deployment.py  stack.py  stack_lock.py  stack_tag.py  sync_point.py  user_creds.py  watch_data.py  watch_rule.py
conveyor/conveyorheat/rpc/: api.py  client.py  listener_client.py  worker_api.py  worker_client.py
conveyor/conveyorheat/scaling/: cooldown.py  lbutils.py  rolling_update.py  scalingutil.py  template.py
conveyor/db/: __init__.py  api.py  base.py  migration.py  utils.py
conveyor/db/sqlalchemy/: api.py  filters.py  migration.py  models.py  types.py  utils.py
conveyor/heat/: __init__.py  client.py  heat.py  urlfetch.py
conveyor/his/: __init__.py  api.py
conveyor/image/: __init__.py  api.py  glance.py
conveyor/network/: __init__.py  conveyorcaa_network.py  neutron.py
conveyor/objects/: base.py  clone_resource.py  fields.py  plan.py
conveyor/plan/: api.py  manager.py  rpcapi.py
conveyor/resource/: __init__.py  api.py  manager.py  resource.py  resource_state.py  rpcapi.py
conveyor/resource/driver/: base.py  consistencygroup.py  float_ips.py  heatresource.py  instances.py  loadbalance.py  networks.py  secgroup.py  stacks.py  volumes.py
conveyor/resource/plugins/: driver.py
conveyor/server/: api.py  manager.py  rpcapi.py
conveyor/tests/: fixtures.py  test.py
conveyor/tests/unit/: conf_fixture.py  fake_constants.py
conveyor/tests/unit/api/: fakes.py
conveyor/volume/: __init__.py  cinder.py  conveyorcaa_volume.py
doc/: README
etc/conveyor/: api-paste.ini  conveyor-config-generator.conf  conveyor.conf  rootwrap.conf
etc/conveyor/rootwrap.d/: conveyor.filters
tools/: conveyor-all  conveyor-api  conveyor-clone  conveyor-manager  conveyor-resource  conveyored
(+250 files in other folders)
