[metadata]
name = conveyor
version = 2016.1
summary = OpenStack clone/migrate service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyor

[files]
data_files =
    /etc/ = etc/*

[entry_points]
console_scripts =
    conveyor-all = conveyor.cmd.all:main
    conveyor-api = conveyor.cmd.api:main
    conveyor-manager = conveyor.cmd.manage:main
    conveyor-clone = conveyor.cmd.clone:main
    conveyor-resource = conveyor.cmd.resource:main
    conveyor-rootwrap = oslo_rootwrap.cmd:main

conveyorheat.templates =
    heat_template_version.2014-10-16 = conveyorheat.engine.hot.template:HOTemplate20141016
    heat_template_version.2015-04-30 = conveyorheat.engine.hot.template:HOTemplate20150430
    HeatTemplateFormatVersion.2012-12-12 = conveyorheat.engine.cfn.template:HeatTemplate
    heat_template_version.2015-10-15 = conveyorheat.engine.hot.template:HOTemplate20151015
    AWSTemplateFormatVersion.2010-09-09 = conveyorheat.engine.cfn.template:CfnTemplate
    heat_template_version.2013-05-23 = conveyorheat.engine.hot.template:HOTemplate20130523
    heat_template_version.2016-04-08 = conveyorheat.engine.hot.template:HOTemplate20160408
    heat_template_version.2016-10-14 = conveyorheat.engine.hot.template:HOTemplate20161014


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = conveyor/locale
domain = conveyor

[update_catalog]
domain = conveyor
output_dir = conveyor/locale
input_file = conveyor/locale/conveyor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = conveyor/locale/conveyor.pot
