[metadata]
name = conveyor
version = 2016.1
summary = OpenStack clone/migrate service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyor

[files]
data_files =
    /etc/ = etc/*

[entry_points]
console_scripts =
    conveyor-all = conveyor.cmd.all:main
    conveyor-api = conveyor.cmd.api:main
    conveyor-manager = conveyor.cmd.manage:main
    conveyor-clone = conveyor.cmd.clone:main
    conveyor-resource = conveyor.cmd.resource:main
    conveyor-rootwrap = oslo_rootwrap.cmd:main

conveyorheat.templates =
    heat_template_version.2014-10-16 = conveyorheat.engine.hot.template:HOTemplate20141016
    heat_template_version.2015-04-30 = conveyorheat.engine.hot.template:HOTemplate20150430
    HeatTemplateFormatVersion.2012-12-12 = conveyorheat.engine.cfn.template:HeatTemplate
    heat_template_version.2015-10-15 = conveyorheat.engine.hot.template:HOTemplate20151015
    AWSTemplateFormatVersion.2010-09-09 = conveyorheat.engine.cfn.template:CfnTemplate
    heat_template_version.2013-05-23 = conveyorheat.engine.hot.template:HOTemplate20130523
    heat_template_version.2016-04-08 = conveyorheat.engine.hot.template:HOTemplate20160408
    heat_template_version.2016-10-14 = conveyorheat.engine.hot.template:HOTemplate20161014

oslo.config.opts =
    conveyorheat.engine.resources = conveyorheat.engine.resources:list_opts
    conveyorheat.common.config = conveyorheat.common.config:list_opts
    heat_integrationtests.common.config = heat_integrationtests.common.config:list_opts
    conveyorheat.common.crypt = conveyorheat.common.crypt:list_opts
    conveyorheat.common.context = conveyorheat.common.context:list_opts
    conveyorheat.common.heat_keystoneclient = conveyorheat.common.heat_keystoneclient:list_opts
    conveyorheat.openstack.common.policy = conveyorheat.openstack.common.policy:list_opts
    conveyorheat.api.middleware.ssl = conveyorheat.api.middleware.ssl:list_opts
    conveyorheat.common.wsgi = conveyorheat.common.wsgi:list_opts
    conveyorheat.api.aws.ec2token = conveyorheat.api.aws.ec2token:list_opts
    conveyorheat.engine.notification = conveyorheat.engine.notification:list_opts
    conveyorheat.engine.clients = conveyorheat.engine.clients:list_opts

conveyorheat.event_sinks =
    zaqar-queue = conveyorheat.engine.clients.os.zaqar:ZaqarEventSink

conveyorheat.constraints =
    designate.domain = conveyorheat.engine.clients.os.designate:DesignateDomainConstraint
    elb.cert = conveyorheat.engine.clients.huawei.elb:CertificateConstraint
    barbican.secret = conveyorheat.engine.clients.os.barbican:SecretConstraint
    ip_addr = conveyorheat.engine.constraint.common_constraints:IPConstraint
    keystone.user = conveyorheat.engine.clients.os.keystone:KeystoneUserConstraint
    elb.lb = conveyorheat.engine.clients.huawei.elb:LoadbalancerConstraint
    senlin.cluster = conveyorheat.engine.clients.os.senlin:ClusterConstraint
    cinder.volume = conveyorheat.engine.clients.os.cinder:VolumeConstraint
    nova.flavor = conveyorheat.engine.clients.os.nova:FlavorConstraint
    manila.share_type = conveyorheat.engine.clients.os.manila:ManilaShareTypeConstraint
    nova.host = conveyorheat.engine.clients.os.nova:HostConstraint
    neutron.network = conveyorheat.engine.clients.os.neutron.neutron_constraints:NetworkConstraint
    cinder.backup = conveyorheat.engine.clients.os.cinder:VolumeBackupConstraint
    elb.ls = conveyorheat.engine.clients.huawei.elb:ListenerConstraint
    keystone.service = conveyorheat.engine.clients.os.keystone:KeystoneServiceConstraint
    timezone = conveyorheat.engine.constraint.common_constraints:TimezoneConstraint
    cinder.vtype = conveyorheat.engine.clients.os.cinder:VolumeTypeConstraint
    glance.image = conveyorheat.engine.clients.os.glance:ImageConstraint
    neutron.lbaas.loadbalancer = conveyorheat.engine.clients.os.neutron.lbaas_constraints:LoadbalancerConstraint
    keystone.role = conveyorheat.engine.clients.os.keystone:KeystoneRoleConstraint
    senlin.profile = conveyorheat.engine.clients.os.senlin:ProfileConstraint
    manila.share_snapshot = conveyorheat.engine.clients.os.manila:ManilaShareSnapshotConstraint
    keystone.domain = conveyorheat.engine.clients.os.keystone:KeystoneDomainConstraint
    neutron.lbaas.pool = conveyorheat.engine.clients.os.neutron.lbaas_constraints:PoolConstraint
    magnum.baymodel = conveyorheat.engine.clients.os.magnum:BaymodelConstraint
    cinder.snapshot = conveyorheat.engine.clients.os.cinder:VolumeSnapshotConstraint
    nova.server = conveyorheat.engine.clients.os.nova:ServerConstraint
    monasca.notification = conveyorheat.engine.clients.os.monasca:MonascaNotificationConstraint
    net_cidr = conveyorheat.engine.constraint.common_constraints:CIDRConstraint
    neutron.router = conveyorheat.engine.clients.os.neutron.neutron_constraints:RouterConstraint
    neutron.port = conveyorheat.engine.clients.os.neutron.neutron_constraints:PortConstraint
    senlin.profile_type = conveyorheat.engine.clients.os.senlin:ProfileTypeConstraint
    manila.share_network = conveyorheat.engine.clients.os.manila:ManilaShareNetworkConstraint
    iso_8601 = conveyorheat.engine.constraint.common_constraints:ISO8601Constraint
    neutron.address_scope = conveyorheat.engine.clients.os.neutron.neutron_constraints:AddressScopeConstraint
    sahara.plugin = conveyorheat.engine.clients.os.sahara:PluginConstraint
    keystone.group = conveyorheat.engine.clients.os.keystone:KeystoneGroupConstraint
    mistral.workflow = conveyorheat.engine.clients.os.mistral:WorkflowConstraint
    keystone.region = conveyorheat.engine.clients.os.keystone:KeystoneRegionConstraint
    neutron.subnet = conveyorheat.engine.clients.os.neutron.neutron_constraints:SubnetConstraint
    keystone.project = conveyorheat.engine.clients.os.keystone:KeystoneProjectConstraint
    neutron.subnetpool = conveyorheat.engine.clients.os.neutron.neutron_constraints:SubnetPoolConstraint
    neutron.qos_policy = conveyorheat.engine.clients.os.neutron.neutron_constraints:QoSPolicyConstraint
    neutron.lb.provider = conveyorheat.engine.clients.os.neutron.neutron_constraints:LBaasV1ProviderConstraint
    barbican.container = conveyorheat.engine.clients.os.barbican:ContainerConstraint
    test_constr = conveyorheat.engine.constraint.common_constraints:TestConstraintDelay
    neutron.lbaas.provider = conveyorheat.engine.clients.os.neutron.lbaas_constraints:LBaasV2ProviderConstraint
    neutron.lbaas.listener = conveyorheat.engine.clients.os.neutron.lbaas_constraints:ListenerConstraint
    mac_addr = conveyorheat.engine.constraint.common_constraints:MACConstraint
    nova.keypair = conveyorheat.engine.clients.os.nova:KeypairConstraint
    cron_expression = conveyorheat.engine.constraint.common_constraints:CRONExpressionConstraint
    sahara.image = conveyorheat.engine.clients.os.sahara:ImageConstraint
    trove.flavor = conveyorheat.engine.clients.os.trove:FlavorConstraint
    senlin.policy_type = conveyorheat.engine.clients.os.senlin:PolicyTypeConstraint
    nova.network = conveyorheat.engine.clients.os.nova:NetworkConstraint

oslo.messaging.notify.drivers =
    conveyorheat.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify.messaging:MessagingV2Driver
    conveyorheat.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    conveyorheat.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
    conveyorheat.openstack.common.notifier.rpc_notifier = oslo_messaging.notify.messaging:MessagingDriver
    conveyorheat.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver

oslo.config.opts.defaults =
    conveyorheat.common.config = conveyorheat.common.config:set_config_defaults

conveyorheat.clients =
    senlin = conveyorheat.engine.clients.os.senlin:SenlinClientPlugin
    sahara = conveyorheat.engine.clients.os.sahara:SaharaClientPlugin
    barbican = conveyorheat.engine.clients.os.barbican:BarbicanClientPlugin
    glance = conveyorheat.engine.clients.os.glance:GlanceClientPlugin
    iam = conveyorheat.engine.clients.huawei.iam:IAMClientPlugin
    monasca = conveyorheat.engine.clients.os.monasca:MonascaClientPlugin
    elb = conveyorheat.engine.clients.huawei.elb:ElbClientPlugin
    nova = conveyorheat.engine.clients.os.nova:NovaClientPlugin
    mistral = conveyorheat.engine.clients.os.mistral:MistralClientPlugin
    keystone = conveyorheat.engine.clients.os.keystone:KeystoneClientPlugin
    manila = conveyorheat.engine.clients.os.manila:ManilaClientPlugin
    magnum = conveyorheat.engine.clients.os.magnum:MagnumClientPlugin
    neutron = conveyorheat.engine.clients.os.neutron:NeutronClientPlugin
    designate = conveyorheat.engine.clients.os.designate:DesignateClientPlugin
    job = conveyorheat.engine.clients.huawei.job:JobClientPlugin
    ces = conveyorheat.engine.clients.huawei.ces.ces:CESClientPlugin
    scheduler = conveyorheat.engine.clients.huawei.scheduler.scheduler_client:SchedulerClientPlugin
    swift = conveyorheat.engine.clients.os.swift:SwiftClientPlugin
    ceilometer = conveyorheat.engine.clients.os.ceilometer:CeilometerClientPlugin
    trove = conveyorheat.engine.clients.os.trove:TroveClientPlugin
    heat = conveyorheat.engine.clients.os.heat_plugin:HeatClientPlugin
    zaqar = conveyorheat.engine.clients.os.zaqar:ZaqarClientPlugin
    cinder = conveyorheat.engine.clients.os.cinder:CinderClientPlugin
    groupwatch = conveyorheat.engine.clients.huawei.groupwatch.groupwatch:GroupwatchClientPlugin


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = conveyor/locale
domain = conveyor

[update_catalog]
domain = conveyor
output_dir = conveyor/locale
input_file = conveyor/locale/conveyor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = conveyor/locale/conveyor.pot
