[metadata]
name = conveyor
version = 2016.1
summary = OpenStack clone/migrate service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conveyor

[entry_points]
console_scripts =
    conveyor-all = conveyor.cmd.all:main
    conveyor-api = conveyor.cmd.api:main
    conveyor-manager = conveyor.cmd.manage:main
    conveyor-clone = conveyor.cmd.clone:main
    conveyor-resource = conveyor.cmd.resource:main
    conveyor-rootwrap = oslo_rootwrap.cmd:main

conveyorheat.templates =
    heat_template_version.2014-10-16 = conveyor.conveyorheat.engine.hot.template:HOTemplate20141016
    heat_template_version.2015-04-30 = conveyor.conveyorheat.engine.hot.template:HOTemplate20150430
    HeatTemplateFormatVersion.2012-12-12 = conveyor.conveyorheat.engine.cfn.template:HeatTemplate
    heat_template_version.2015-10-15 = conveyor.conveyorheat.engine.hot.template:HOTemplate20151015
    AWSTemplateFormatVersion.2010-09-09 = conveyor.conveyorheat.engine.cfn.template:CfnTemplate
    heat_template_version.2013-05-23 = conveyor.conveyorheat.engine.hot.template:HOTemplate20130523
    heat_template_version.2016-04-08 = conveyor.conveyorheat.engine.hot.template:HOTemplate20160408
    heat_template_version.2016-10-14 = conveyor.conveyorheat.engine.hot.template:HOTemplate20161014

conveyorheat.clients =
    senlin = conveyor.conveyorheat.engine.clients.os.senlin:SenlinClientPlugin
    sahara = conveyor.conveyorheat.engine.clients.os.sahara:SaharaClientPlugin
    barbican = conveyor.conveyorheat.engine.clients.os.barbican:BarbicanClientPlugin
    glance = conveyor.conveyorheat.engine.clients.os.glance:GlanceClientPlugin
    iam = conveyor.conveyorheat.engine.clients.huawei.iam:IAMClientPlugin
    monasca = conveyor.conveyorheat.engine.clients.os.monasca:MonascaClientPlugin
    elb = conveyor.conveyorheat.engine.clients.huawei.elb:ElbClientPlugin
    nova = conveyor.conveyorheat.engine.clients.os.nova:NovaClientPlugin
    mistral = conveyor.conveyorheat.engine.clients.os.mistral:MistralClientPlugin
    keystone = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneClientPlugin
    manila = conveyor.conveyorheat.engine.clients.os.manila:ManilaClientPlugin
    magnum = conveyor.conveyorheat.engine.clients.os.magnum:MagnumClientPlugin
    neutron = conveyor.conveyorheat.engine.clients.os.neutron:NeutronClientPlugin
    designate = conveyor.conveyorheat.engine.clients.os.designate:DesignateClientPlugin
    swift = conveyor.conveyorheat.engine.clients.os.swift:SwiftClientPlugin
    ceilometer = conveyor.conveyorheat.engine.clients.os.ceilometer:CeilometerClientPlugin
    trove = conveyor.conveyorheat.engine.clients.os.trove:TroveClientPlugin
    heat = conveyor.conveyorheat.engine.clients.os.heat_plugin:HeatClientPlugin
    zaqar = conveyor.conveyorheat.engine.clients.os.zaqar:ZaqarClientPlugin
    cinder = conveyor.conveyorheat.engine.clients.os.cinder:CinderClientPlugin

conveyorheat.event_sinks =
    zaqar-queue = conveyor.conveyorheat.engine.clients.os.zaqar:ZaqarEventSink

conveyorheat.constraints =
    designate.domain = conveyor.conveyorheat.engine.clients.os.designate:DesignateDomainConstraint
    elb.cert = conveyor.conveyorheat.engine.clients.huawei.elb:CertificateConstraint
    barbican.secret = conveyor.conveyorheat.engine.clients.os.barbican:SecretConstraint
    ip_addr = conveyor.conveyorheat.engine.constraint.common_constraints:IPConstraint
    keystone.user = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneUserConstraint
    elb.lb = conveyor.conveyorheat.engine.clients.huawei.elb:LoadbalancerConstraint
    senlin.cluster = conveyor.conveyorheat.engine.clients.os.senlin:ClusterConstraint
    cinder.volume = conveyor.conveyorheat.engine.clients.os.cinder:VolumeConstraint
    nova.flavor = conveyor.conveyorheat.engine.clients.os.nova:FlavorConstraint
    manila.share_type = conveyor.conveyorheat.engine.clients.os.manila:ManilaShareTypeConstraint
    nova.host = conveyor.conveyorheat.engine.clients.os.nova:HostConstraint
    neutron.network = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:NetworkConstraint
    cinder.backup = conveyor.conveyorheat.engine.clients.os.cinder:VolumeBackupConstraint
    elb.ls = conveyor.conveyorheat.engine.clients.huawei.elb:ListenerConstraint
    keystone.service = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneServiceConstraint
    timezone = conveyor.conveyorheat.engine.constraint.common_constraints:TimezoneConstraint
    cinder.vtype = conveyor.conveyorheat.engine.clients.os.cinder:VolumeTypeConstraint
    glance.image = conveyor.conveyorheat.engine.clients.os.glance:ImageConstraint
    neutron.lbaas.loadbalancer = conveyor.conveyorheat.engine.clients.os.neutron.lbaas_constraints:LoadbalancerConstraint
    keystone.role = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneRoleConstraint
    senlin.profile = conveyor.conveyorheat.engine.clients.os.senlin:ProfileConstraint
    manila.share_snapshot = conveyor.conveyorheat.engine.clients.os.manila:ManilaShareSnapshotConstraint
    keystone.domain = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneDomainConstraint
    neutron.lbaas.pool = conveyor.conveyorheat.engine.clients.os.neutron.lbaas_constraints:PoolConstraint
    magnum.baymodel = conveyor.conveyorheat.engine.clients.os.magnum:BaymodelConstraint
    cinder.snapshot = conveyor.conveyorheat.engine.clients.os.cinder:VolumeSnapshotConstraint
    nova.server = conveyor.conveyorheat.engine.clients.os.nova:ServerConstraint
    monasca.notification = conveyor.conveyorheat.engine.clients.os.monasca:MonascaNotificationConstraint
    net_cidr = conveyor.conveyorheat.engine.constraint.common_constraints:CIDRConstraint
    neutron.router = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:RouterConstraint
    neutron.port = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:PortConstraint
    senlin.profile_type = conveyor.conveyorheat.engine.clients.os.senlin:ProfileTypeConstraint
    manila.share_network = conveyor.conveyorheat.engine.clients.os.manila:ManilaShareNetworkConstraint
    iso_8601 = conveyor.conveyorheat.engine.constraint.common_constraints:ISO8601Constraint
    neutron.address_scope = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:AddressScopeConstraint
    sahara.plugin = conveyor.conveyorheat.engine.clients.os.sahara:PluginConstraint
    keystone.group = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneGroupConstraint
    mistral.workflow = conveyor.conveyorheat.engine.clients.os.mistral:WorkflowConstraint
    keystone.region = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneRegionConstraint
    neutron.subnet = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:SubnetConstraint
    keystone.project = conveyor.conveyorheat.engine.clients.os.keystone:KeystoneProjectConstraint
    neutron.subnetpool = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:SubnetPoolConstraint
    neutron.qos_policy = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:QoSPolicyConstraint
    neutron.lb.provider = conveyor.conveyorheat.engine.clients.os.neutron.neutron_constraints:LBaasV1ProviderConstraint
    barbican.container = conveyor.conveyorheat.engine.clients.os.barbican:ContainerConstraint
    test_constr = conveyor.conveyorheat.engine.constraint.common_constraints:TestConstraintDelay
    neutron.lbaas.provider = conveyor.conveyorheat.engine.clients.os.neutron.lbaas_constraints:LBaasV2ProviderConstraint
    neutron.lbaas.listener = conveyor.conveyorheat.engine.clients.os.neutron.lbaas_constraints:ListenerConstraint
    mac_addr = conveyor.conveyorheat.engine.constraint.common_constraints:MACConstraint
    nova.keypair = conveyor.conveyorheat.engine.clients.os.nova:KeypairConstraint
    cron_expression = conveyor.conveyorheat.engine.constraint.common_constraints:CRONExpressionConstraint
    sahara.image = conveyor.conveyorheat.engine.clients.os.sahara:ImageConstraint
    trove.flavor = conveyor.conveyorheat.engine.clients.os.trove:FlavorConstraint
    senlin.policy_type = conveyor.conveyorheat.engine.clients.os.senlin:PolicyTypeConstraint
    nova.network = conveyor.conveyorheat.engine.clients.os.nova:NetworkConstraint


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = conveyor/locale
domain = conveyor

[update_catalog]
domain = conveyor
output_dir = conveyor/locale
input_file = conveyor/locale/conveyor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = conveyor/locale/conveyor.pot
